# realsr-edge

./: .gitignore  LICENSE  Project_Structure.txt  README.md  SPECIFICATION.md  requirements.txt
cpp_inference/: CMakeLists.txt  README.md  build.bat  edsr_runner.cpp  run.bat
cpp_inference/src/: main.cpp
docs/adr/: 004_loss_function_choice.md
learning/: deployment_lessons_learned.md  deployment_methodology.md  image_quality_metrics.md  int8_perception_finding.md  perceptual_metric_for_sr.md  pipeline_anatomy.md  pipeline_overview.md  quantization_terminology.md  reading_calibration_histograms.md  senior_deliverable_framing.md  sr_design_thinking.md  sr_scale_resolution_mapping.md  when_to_use_qat.md
notebooks/: 02_training_demo.ipynb  04_quantization_analysis.ipynb
results/layer_analysis/edsr_200ep/: layer_analysis.csv  layer_analysis.md  summary.json
results/layer_analysis/edsr_200ep_with_add/: layer_analysis.csv  layer_analysis.md  summary.json
results/mixed_precision/edsr_200ep/: mixed_precision_sweep.csv  mixed_precision_sweep.json
results/mixed_precision/edsr_200ep_qat/: mixed_precision_sweep.csv  mixed_precision_sweep.json
results/onnx_benchmark/edsr_200ep/: benchmark.csv  benchmark.md  metadata.json
results/onnx_benchmark/edsr_200ep_full/: benchmark.csv  benchmark.md  deploy_summary.md  metadata.json
results/onnx_benchmark/edsr_200ep_with_trt/: benchmark.csv  benchmark.md  metadata.json
results/onnx_exports/edsr_200ep/: README.md  metadata.json  verification.md
results/quantization/200ep/: sensitivity.csv  shootout.csv  shootout.md
results/quantization/200ep_with_report/: pytorch_vs_onnx_cross_validation.md  report.md  sensitivity.csv  sensitivity.md  shootout.csv  shootout.md
results/quantization/calibration_ablation/: ablation.csv  calibration_ablation.md  per_layer_amax.csv
results/runs/20260427_143542_ep200_b16_scale2_realistic/: metrics.csv
results/trt_benchmark/edsr_200ep/: benchmark.csv  (+2 more)
src/: __init__.py
src/data/: __init__.py  dataset.py  degradation.py
src/deployment/: __init__.py  analyze_layers.py  benchmark_onnx.py  benchmark_trt.py  compare_mixed_precision.py  deploy_summary.py  export_onnx.py  export_pipeline.py  mindmap_validation.py  mixed_precision.py  profile_trt.py  qdq_paradox_chart.py  run_pipeline.py  section3_figures.py  visualize_results.py
src/models/: __init__.py  common.py  edsr.py
src/quantization/: __init__.py  _onnx_inference.py  analyze.py  calibration_ablation.py  eval_qat.py  fake_quant.py  lpips_heatmap.py  structural_heatmap.py
src/training/: train.py
(+7 files in other folders)
